[package]
name = "sample"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "Sample extension that is useful to use as an extension base"
license = "GPL-3.0-or-later"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
extshared_build_helper.workspace = true

[dependencies]
extshared.workspace = true

[target.'cfg(windows)'.dependencies]
windows-targets = "0.53"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
	"Win32_System_SystemInformation", # RtlGetVersion
]
